<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"

    android:layoutDirection="rtl">

    <TextView
        android:id="@+id/tv_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_group_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="0dp"
        android:text="۱"
        app:layout_constraintStart_toEndOf="@id/tv_group_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_instructor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/instructor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_group_id" />

    <TextView
        android:id="@+id/tv_instructor_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="نام استاد"
        app:layout_constraintStart_toEndOf="@id/tv_instructor_label"
        app:layout_constraintTop_toBottomOf="@id/tv_group_id" />


    <TextView
        android:id="@+id/tv_capacity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/capacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instructor_name" />

    <TextView
        android:id="@+id/tv_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="۵۰"
        app:layout_constraintStart_toEndOf="@id/tv_capacity_label"
        app:layout_constraintTop_toBottomOf="@id/tv_instructor_name" />

    <TextView
        android:id="@+id/tv_exam_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/exam_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_capacity" />

    <TextView
        android:id="@+id/tv_exam_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="۵ دی ۱۴۰۱ ۹:۰۰"
        app:layout_constraintStart_toEndOf="@id/tv_exam_time_label"
        app:layout_constraintTop_toBottomOf="@id/tv_capacity" />

    <TextView
        android:id="@+id/tv_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_exam_time" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="توضیح گروه"
        app:layout_constraintStart_toEndOf="@+id/tv_info_label"
        app:layout_constraintTop_toBottomOf="@id/tv_exam_time" />


    <TextView
        android:id="@+id/tv_class_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/class_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />

    <TextView
        android:id="@+id/tv_class_time"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="زمان کلاس"
        app:layout_constraintStart_toEndOf="@+id/tv_class_time_label"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:text="@string/add_group"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_class_time" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:text="@string/delete_group"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_class_time" />

</androidx.constraintlayout.widget.ConstraintLayout>